_includes/css/main.css
/* ... */
a {
    outline: 0;
    text-decoration: none;
    font-weight: bold;
}

a:hover,
a:focus,
a:active,
a.active,
#article a:hover,
#blog a:hover h3,
.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus {
    color: #{{ site.color.accent }};
    text-decoration: none;
    -webkit-transition: all ease .7s;
    -moz-transition: all ease .7s;
    transition: all ease .7s;
}

header img:hover,
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus,
.navbar-default .navbar-brand:hover,
.navbar-default .navbar-brand:focus,
#article .progress:hover .progress-bar,
.scroll-top .btn:hover,
.scroll-top .btn:focus,
.btn-social:hover,
.navbar-default .navbar-toggle:hover,
.navbar-default .navbar-toggle:focus  {
    background-color: #{{ site.color.accent }};
    -webkit-transition: all ease 1s;
    -moz-transition: all ease 1s;
    transition: all ease 1s;
}

.cv-img:hover,
.btn-social:hover {
    border-color: #{{ site.color.accent }};
    -webkit-transition: all ease 1s;
    -moz-transition: all ease 1s;
    transition: all ease 1s;
}

#article .cv-item:hover {
    border-left-color: #{{ site.color.accent }};
    -webkit-transition: all ease 1s;
    -moz-transition: all ease 1s;
    transition: all ease 1s;
}

h1,
h2,
h3,
h4,
h5,
h6,
.navbar,
.navbar a,
header .intro-text .name,
header .intro-text .name-small,
header .intro-text .owner,
header .intro-text .owner-small,
#article .progress > .progress-type {
    text-transform: uppercase;
    /*font-family: 'Proxima Nova', sans-serif;*/
    font-family: 'Montserrat', Helvetica, sans-serif !important;
    font-weight: 300;
}

h3,
h4,
h5,
h6,
#article .progress > .progress-type {
    font-weight: 300;
}

section h3,
footer h3,
header .intro-text .owner,
header .intro-text .owner-small {
    font-weight: 100;
}

h4 {
    text-transform: none;
}

tt, code, kbd, samp, pre {
    font-family: 'Hack', 'Meslo LG S for Powerline', 'Menlo', monospace !important;
}

hr.separating-line {
    margin: 15px auto 60px;
    padding: 0;
    /*max-width: 250px;*/
    border: 0;
    /*border-top: solid 5px;*/
    text-align: center;
    border-top: 1px solid #{{ site.color.articletext }};
}

header hr.separating-line {
    margin: 15px auto 30px;
}

#post hr.separating-line {
    margin-bottom: 10px;
}

ul {
    list-style-type: square;
}

.img-centered {
    margin: 0 auto;
}

header {
    text-align: center;
    /*color: #fff;*/
    background: #{{ site.color.primary }};
}

header .container {
    padding-top: 100px;
    padding-bottom: 50px;
}

header img {
    display: block;
    margin: 0 auto 20px;
    border-radius: 100%;
    background-color: #{{ site.color.secondary }};
}

.logo-img {
    padding: 25px;
    max-width: 196px;
}

.cv-img {
    max-width: 196px;
    border: 8px solid #{{ site.color.secondary }};
}

header .intro-text .name,
header .intro-text .name-small {
    background-color: transparent;
    display: block;
    font-size: 4em;
}

header .intro-text .owner,
header .intro-text .owner-small {
    background-color: transparent;
    font-size: 1.75em;
}

@media(max-width:550px) {
    header .intro-text .name,
    header .intro-text .name-small {
        font-size: 3em;
        word-wrap: break-word;
    }  

    header .intro-text .owner,
    header .intro-text .owner-small {
        font-size: 1.5em;
    }
}

@media(min-width:768px) {
    header .container {
        padding-top: 180px;
        padding-bottom: 100px;
    }

    header .intro-text .name {
        font-size: 5.3em;
    }

    header .intro-text .name-small {
        font-size: 4.1em;
    }

    header .intro-text .owner {
        font-size: 2.35em;
    }

    header hr.separating-line {
        margin: 25px auto 45px;
    }

    .logo-img {
        padding: 35px;
        max-width: 256px;
    }

    .cv-img {
        max-width: 256px;
    }

    .navbar-fixed-top {
        padding: 0px 0;
        -webkit-transition: padding .3s;
        -moz-transition: padding .3s;
        transition: padding .3s;
    }
}

.navbar .navbar-nav {
    letter-spacing: 1px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.navbar-nav > li > a {
    margin-top: 6px;
    padding-top:    20px;
    padding-bottom: 20px;
    -webkit-transition: all .3s;
    -moz-transition: all .3s;
    transition: all .3s;
}

.navbar-default .navbar-nav > li > a:hover,
.navbar-default .navbar-nav > li > a:focus,
.navbar-default .navbar-nav > .active > a,
.navbar-default .navbar-nav > .active > a:hover,
.navbar-default .navbar-nav > .active > a:focus  {
    -webkit-transition: all ease .3s;
    -moz-transition: all ease .3s;
    transition: all ease .3s;
}

.navbar-fixed-top.navbar-shrink .navbar-nav > li > a {
    margin-top: 0px;
    padding-top: 10px;
    padding-bottom: 10px;
}

.navbar .navbar-nav li a:focus {
    outline: 0;
}

.navbar-default,
.navbar-inverse {
    border: 0;
}

.navbar-default .navbar-brand {
    font-size: 2.5em;
    padding: 0px;
    height: auto;
    margin: auto;
    margin-left: 15px;
}

.navbar-default .navbar-brand img {
    margin-left: 10px;
    margin-right: 10px;
    width: 90px;
    height: 90px;
    -webkit-transition: all ease .3s;
    -moz-transition: all ease .3s;
    transition: all ease .3s;
}

.navbar-shrink .navbar-brand img {
    width: 61px;
    height: 61px;
}

.navbar-collapse {
    box-shadow: none;
}

section {
    color: #{{ site.color.secondary }};
    padding: 80px 0;
}

section p {
    color: #{{ site.color.articletext }};
}

#post {
    padding-top: 160px;
}

section h2 {
    margin: 0;
    font-size: 2.8em;
}

section h2,
section h3 {
    text-align: left;
}

section.success {
    /*color: #fff;*/
    background-color: #{{ site.color.primary }};
    /*background-image: url('/img/bg.png');*/
}

section.success p {
    /*color: #fff;*/
}
/* ... */

